--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -1,6 +1,35 @@
-<div class="container" style="position:relative;transform: translate(0%, 0%); width:50%;top:0%;background-color:#fafafa">
-   <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação" style="position:relative;transform: translate(35%, 0%)">
+
+
   
+    
+  <div class="modal fade" id="myModal" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+          <h4 class="modal-title" id="myModalLabel">Código QR</h4>
+        </div>
+        <div class="modal-body">
+          <div>
+            <span ng-if="vm.QR.length>0">
+              <img ng-src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data={{vm.QR}}">
+            </span>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+          <button type="button" class="btn btn-primary info">Imprimir</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<div class="container" style="position:relative;transform: translate(0%, 0%); width:50%;top:0%;background-color:#fafafa">
+  <img ng-src="/assets/logotipo-nexti.png" alt="NExTI - Nucleo de Extensão em Tecnologia da Informação" style="position:relative;transform: translate(35%, 0%)">
+
+
   <form name="vm.form">
     <div ng-if="vm.mensagem">{{vm.mensagem}}</div>
 
@@ -61,11 +90,14 @@
     </div>
 
     <label for="qr"> <h4>Qrcode</h4> </label>
-    <input class="form-control" type="text" name="qr" ng-model="vm.QR" required> <br>
+    <input class="form-control" type="text" name="qr" ng-model="vm.QR" required>
+    <br>
     <div role="alert">
       <span class="error" ng-show="vm.form.qr.$dirty && vm.form.qr.$error.required">
         (Campo obrigatório)</span>
     </div>
+
+
 
     <label for="latitude"> <h4>Latitude</h4> </label>
     <input class="form-control" type="text" ng-model="vm.latitude"> <br>
@@ -73,9 +105,14 @@
     <label for="longitude"> <h4>Longitude</h4></label>
     <input class="form-control" type="text" ng-model="vm.longitude"> <br>
 
+    <button type="button" ng-disabled="vm.QR.length<1" class="btn btn-primary success" data-toggle="modal" data-target="#myModal">Gerar QR</button>
+    <br>
     <br>
     <button class="btn btn-info" ng-click="vm.cadastrarEvento()" ng-disabled="vm.botao" style="background-color:#007db7">OK</button>
 
   </form>
+
+
+
   <br><br>
 </div>
