--- a/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
+++ b/app/assets/javascripts/views/cadastroEvento/CadastrodeEventos.html
@@ -88,7 +88,7 @@
     <label for="qr"> <h4>Qrcode</h4> </label>
     <input class="form-control" type="text" name="qr" ng-model="vm.QR" required style="width:400px">
     <br>
-    <button type="button" class="btn btn-primary" style="position:relative;transform:translate(300%,-150%)"><span class="	glyphicon glyphicon-qrcode"></span> Gerar Qrcode </button>
+    <button type="button" ng-disabled="vm.QR.length<1" data-toggle="modal" data-target="#myModal" class="btn btn-primary" style="position:relative;transform:translate(300%,-150%)"><span class="	glyphicon glyphicon-qrcode"></span> Gerar Qrcode </button>
     <br>
     <div role="alert">
       <span class="error" ng-show="vm.form.qr.$dirty && vm.form.qr.$error.required">
@@ -110,7 +110,6 @@
     <label for="longitude"> <h4>Longitude</h4></label>
     <input class="form-control" type="text" ng-model="vm.longitude"> <br>
 
-    <button type="button" ng-disabled="vm.QR.length<1" class="btn btn-primary success" data-toggle="modal" data-target="#myModal">Gerar QR</button>
     <br>
     <button class="btn btn-info" ng-click="vm.cadastrarEvento()" ng-disabled="vm.botao" style="background-color:#007db7"><span class="	glyphicon glyphicon-ok"></span> OK</button>
 
